# VecDB

./: .gitignore  CMakeLists.txt  LICENSE  readme.md  run.bat
src/: error.h  main.cpp  query.cpp  query.h  storage.cpp  storage.h
src/storage/: page.cpp  page.h  page.ixx  page_manager.h
tests/: test_query.cpp  test_storage.cpp
tests/storage/: test_page.cpp
